Some color changes :3

--- a/css/navigation.css
+++ b/css/navigation.css
@@ -55,7 +55,7 @@ ul.menu {
 }
 
 .nav-wrapper {
-    background-color: #ddd;
+    background-color: #e7eb98;
     border-radius: 1em 1em 0 0;
     box-shadow: inset 1px 1px 0 0 #888, inset -1px -1px 0 0 #fff;
     display: inline-block;
