A lot of css changes

--- a/css/platinum.css
+++ b/css/platinum.css
@@ -296,6 +296,15 @@ body {
     position: absolute;
 }
 
+#music {
+    width: auto;
+    height: auto;
+}
+
+#musicInner {
+    height: 70%;
+}
+
 @media screen and (max-width: 600px) {
     .content {
         width: 100%; 
